--- a/app/src/app.html
+++ b/app/src/app.html
@@ -94,6 +94,13 @@
 			font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 			color: var(--settingHeader);
 		}
+
+		@media screen and (max-width: 930px) {
+        .settingsHeader {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 	</style>
 </head>
 
