--- a/app/src/app.html
+++ b/app/src/app.html
@@ -19,18 +19,26 @@
         </script>
         <style>
             ::-webkit-scrollbar {
-                width: 8px;
+                width: 10px;
+                height: 4px;
+            }
+
+            *:not(body)::-webkit-scrollbar {
+                width: 3px;
                 height: 4px;
             }
 
             ::-webkit-scrollbar-track {
-                box-shadow: inset 0 0 5px grey;
-                border-radius: 10px;
+                background-color: rgb(59, 59, 59);
+                border-radius: 0px;
+            }
+
+            *:not(body)::-webkit-scrollbar-track {
+                border-radius: 15px;
             }
 
             ::-webkit-scrollbar-thumb {
-                background: #8b8b8bfb;
-                border-radius: 10px;
+                background: #666363fb;
             }
 
             :root {
